@@ -4,8 +4,12 @@ Mobius Forensic Toolkit 2.24
 	* Profiles: Added app-gecko processor
 	* Profiles: Added app-sticky-notes processor
 	* ice: Updated project homepage on About Dialog
+	* app-ares: Removed new_transaction/commit calls on function on_complete
 	* app-emule: Removed new_transaction/commit calls on function on_complete
 	* app-emule: Enhanced profile::add_preferences_dat function with stricter file validation
+	* app-shareaza: Removed new_transaction/commit calls on function on_complete
+	* app-shareaza: Enhanced profile::add_profile_xml function with stricter file validation
+	* app-utorrent: Removed new_transaction/commit calls on function on_complete
 	* pymobius.ant.evidence.vfs.autofill: Removed old gecko code
 	* pymobius.ant.evidence.vfs.bookmarked_urls: Removed old gecko code
 	* pymobius.ant.evidence.vfs.cookies: Removed old gecko code
@@ -15,6 +19,7 @@ Mobius Forensic Toolkit 2.24
 	* libmobius_core: Added new method database::new_statement_with_pattern
 	* libmobius_core: Added new method io::line_reader (bytearray)
 	* libmobius_core: Added new function datetime::new_datetime_from_dot_net_timestamp
+	* libmobius_core: Changed vfs::fs_file::set_path to also set file name
 	* libmobius_framework: Added new template function get_domain_text
 	* libmobius_python: Added new function datetime.new_datetime_from_dot_net_timestamp
 
@@ -32,7 +37,6 @@ Mobius Forensic Toolkit 2.23
 	* app-skype: Removed pimpl idiom from vfs_processor_impl
 	* app-skype: Contact's birthday calculation fixed
 	* app-skype: User accounts' birthday calculation fixed
-	* app-skype: Removed new_transaction/commit calls on function on_complete
 	* app-skype: Added support for main.db files version 34
 	* app-skype: Added support for skype.db files version 75
 	* app-skype: Added new method file_s4l_db::_load_messages
